2022-08-16 Hugo Melder <contact@hugomelder.com>

	* Source/NSPredicate.m:
	When parsing an NSArray in -expressionValueWithObject:context:,
	check if the array entry is a NSExpression object.
	* Tests/base/NSPredicate/basic.m:
	Test filter operation.

2022-08-16 Hugo Melder <contact@hugomelder.com>

	* Source/win32/GSFileHandle.m:
	Support overlapped I/O on standard streams in GSFileHandle.
	* Source/GSFileHandle.h:
	Add the isStandardStream instance variable.
	* Tests/base/NSRunLoop/performers.m:
	Remove extraneous unistd header from unit test.

2022-08-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m: Remove restriction (of 8) on the maximum
	number of threads, and set that as the default value instead, so
	the -setMaxConcurrentOperationCount: method can override it.
	Thanks to https://github.com/wbardwel for the suggestion.

2022-08-11 Hugo Melder <contact@hugomelder.com>

	* Tests/base/NSTimeZone/use.m:
	Update NSTimeZone unit test to match macOS behaviour.
	America/Sao_Paulo has no DST.

2022-08-07 Hugo Melder <contact@hugomelder.com>

	* Source/NSTimeZone.m:
	Windows to IANA time zone conversion: remove unsupported
	TIME_ZONE_ID_DAYLIGHT conversion.
	* Tests/base/NSTimeZone/use.m:
	Fix test case to check for the correct standard time zone name. 

2022-08-05 Hugo Melder <contact@hugomelder.com>

	* Tests/base/NSTask/Helpers/GNUmakefile:
	Fix compilation of NSTask helper test files on Windows MSVC.
	* Tests/base/NSTask/general.m:
	* Tests/base/NSTask/launch.m:
	* Tests/base/NSTask/notify.m:
	Conditionally use .exe suffix in executable paths.

2022-08-04 Hugo Melder <contact@hugomelder.com>

	* Tests/base/GSTLS/basic.m:
	Disable test completly if gnutls is not present.
	* Tests/base/NSData/additions.m:
	Check if dataWithContentsOfFile: returns an instance.
	* Tests/base/NSString/tilde.m:
	Skip tilde abbreviation test on Windows.

2022-08-04 Hugo Melder <contact@hugomelder.com>

	* Tests/base/coding/basictypes.m: